--- a/cs connections/cs-scholarship.html
+++ b/cs connections/cs-scholarship.html
@@ -64,12 +64,12 @@
                     <p>APPLY NOW!!</p>
                </div>
 
-                <form action="Appliers/search.php" id="demo" onsubmit=" return validate()">
+                <form action="Appliers/search.php"  onsubmit=" return validate()">
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<b>catagory:</b>
            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <input type="radio" name="catagory" value="All"size="45px"> &nbsp;&nbsp;All &nbsp;&nbsp;
-          <input type="radio"  name="catagory"value="Fs"size="45px"> &nbsp;&nbsp;Full ScholarShip &nbsp;&nbsp;
-          <input type="radio"  name="catagory"value="Ps"size="45px"> &nbsp;&nbsp;Partial ScholarShip
+          <input type="radio"  name="catagory" value="Full ScholarShip"size="45px"> &nbsp;&nbsp;Full ScholarShip &nbsp;&nbsp;
+          <input type="radio"  name="catagory" value="Partial ScholarShip"size="45px"> &nbsp;&nbsp;Partial ScholarShip
           <br><br><b>
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;University:  &nbsp;&nbsp;&nbsp;&nbsp;<input type="text" 
         name="university" size="45px"><br><br>
@@ -78,31 +78,32 @@
 
       <b>    &nbsp;&nbsp;&nbsp; &nbsp;Degree:</b>   &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <input type="radio" name="degreey" value="All"size="45px"> &nbsp;&nbsp;All &nbsp;&nbsp;
-        <input type="radio"  name="degree"value="Fs"size="45px"> &nbsp;&nbsp;Non-Degree &nbsp;&nbsp;
-        <input type="radio"  name="degree"value="Ps"size="45px"> &nbsp;&nbsp;Bachelor&nbsp;&nbsp;
-        <input type="radio"  name="degree"value="Fs"size="45px"> &nbsp;&nbsp;Masters &nbsp;&nbsp;
-        <input type="radio"  name="degree"value="Ps"size="45px"> &nbsp;&nbsp;Doctor&nbsp;&nbsp;
+        <input type="radio"  name="degree" value="Non-Degree"size="45px"> &nbsp;&nbsp;Non-Degree &nbsp;&nbsp;
+        <input type="radio"  name="degree" value="Bachelor"size="45px"> &nbsp;&nbsp;Bachelor&nbsp;&nbsp;
+        <input type="radio"  name="degree" value="Masters"size="45px"> &nbsp;&nbsp;Masters &nbsp;&nbsp;
+        <input type="radio"  name="degree" value="Doctor"size="45px"> &nbsp;&nbsp;Doctor&nbsp;&nbsp;
 
         <br><br>
         &nbsp;&nbsp;&nbsp;&nbsp;<b> &nbsp;&nbsp; &nbsp;Language:</b>
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="radio"  name="language"value="Fs"size="45px"> &nbsp;&nbsp;All&nbsp;&nbsp;
-        <input type="radio"  name="language"value="Ps"size="45px"> &nbsp;&nbsp;Chinese&nbsp;&nbsp;
-          <input type="radio"  name="language"value="Ps"size="45px"> &nbsp;&nbsp;English&nbsp;&nbsp;
+        <input type="radio"  name="language" value="All"size="45px"> &nbsp;&nbsp;All&nbsp;&nbsp;
+        <input type="radio"  name="language" value="Chinese"size="45px"> &nbsp;&nbsp;Chinese&nbsp;&nbsp;
+          <input type="radio"  name="language" value="English"size="45px"> &nbsp;&nbsp;English&nbsp;&nbsp;
         <br><br>
-         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;Semester:   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="radio"  name="semester"value="Fs"size="45px"> &nbsp;&nbsp;All &nbsp;&nbsp;
-        <input type="radio"  name="semester"value="Ps"size="45px"> &nbsp;&nbsp;Spring&nbsp;&nbsp;
-        <input type="radio"  name="semester"value="Fs"size="45px"> &nbsp;&nbsp;Autumn &nbsp;&nbsp;
+         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<b>Semester: </b>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <input type="radio"  name="semester"value="All" size="45px"> &nbsp;&nbsp;All &nbsp;&nbsp;
+        <input type="radio"  name="semester"value="Spring" size="45px"> &nbsp;&nbsp;Spring&nbsp;&nbsp;
+        <input type="radio"  name="semester"value="Autumn" size="45px"> &nbsp;&nbsp;Autumn &nbsp;&nbsp;
         <br><br>
-        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;Program:   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b><input type="text" size="45px" name="program" placeholder="pick a program name"><br><br>
+        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<b>Program: </b>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b><input type="text" size="45px" name="program" placeholder="pick a program name"><br><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <!--<input class="btn btn-success btn-lg" type="image" src="" value="search" >-->
         <input type="submit" value="search" name="">
      
       </form>
 
+<div id="demo"></div>
 
                <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-thumb">
