--- a/cs connections/cs-scholarship.html
+++ b/cs connections/cs-scholarship.html
@@ -251,18 +251,18 @@
                <div class="col-md-7 col-sm-10">
                     <!-- CONTACT FORM HERE -->
                     <div class="wow fadeInUp" data-wow-delay="0.4s">
-                        <form id="contact-form" action="Appliers/sendmessages.php" method="get" onsubmit="return sendmessage()">
+                        <form id="contact-form"  method="GET"   onsubmit="return sendmessage()">
                               <div class="col-md-6 col-sm-6">
-                                   <input type="text" class="form-control" name="name" placeholder="Name" required="">
+                                   <input type="text" class="form-control" id="name" name="name" placeholder="Name" required="">
                               </div>
                               <div class="col-md-6 col-sm-6">
-                                   <input type="email" class="form-control" name="email" placeholder="Email" required="">
+                                   <input type="email" class="form-control" id="email" name="email" placeholder="Email" required="">
                               </div>
                               <div class="col-md-12 col-sm-12">
-                                   <textarea class="form-control" rows="5" name="message" placeholder="Message" required=""></textarea>
+                                   <textarea class="form-control" rows="5" id="message" name="message" placeholder="Message" required=""></textarea>
                               </div>
                               <div class="col-md-offset-8 col-md-4 col-sm-offset-6 col-sm-6">
-                                   <button id="submit" type="submit" class="form-control" name="submit">Send Message</button>
+                                   <button id="submit" type="submit" class="form-control" >Send Message</button>
                               </div>
                         </form>
                     </div>
@@ -324,7 +324,7 @@
     }
   };
   xhttp.open("GET", "Appliers/search.php", true);
-  document.getElementById("demo").innerHTML="<div style='padding:140px;'>hello</div>";
+  //document.getElementById("contact-form").innerHTML="<div style='padding:140px;'>hello</div>";
   xhttp.send();
   return false;
   
@@ -350,10 +350,22 @@
   
 
   function sendmessage(){
+    var name =document.getElementById("name").value;
+    var email =document.getElementById("email").value;
+    var message =document.getElementById("message").value;
 
-   document.getElementById("contact-form").innerHTML="Sucessfully submitted we will send a reply on your email box as soon as possible"
-
-    return false;
+    var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+     document.getElementById("contact-form").innerHTML = "<div style='padding:140px;'>"+this.responseText+"</div>";
+    }
+  };
+  xhttp.open("GET", "Appliers/sendmessages.php?name="+name+"&email="+email+"&message="+message, true);
+  
+  
+  xhttp.send();
+  return false;
+    
 
 
 
